--- a/ToDo
+++ b/ToDo
@@ -12,7 +12,7 @@ Meilleurs Scores                                                OK
     - nom des players ?                                         OK
 
 Affichage des scores                                            OK
-        ->on peut faire 2-3 trucs sur la couleurs, les Fonts, etc inProgress
+        ->on peut faire 2-3 trucs sur la couleurs, les Fonts, etc OK
 
 Interaction avec claviers (déterminer l'angle de lancer)        OK
     - dessiner une ligne                                        OK
